tests/paczka1/small_fuzzy/54190684.err
Error in line 6: 7eNx A600 9,89
Error in line 7: 0atcYII A2 2,8
Error in line 13: A602 A602 73,6
